--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/scout": "^9.8",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
