--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/scout": "^9.8",
         "laravel/socialite": "^5.16",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "mkocansey/bladewind": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
