--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "barryvdh/laravel-dompdf": "^2.2",
+        "cloudinary-labs/cloudinary-laravel": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
@@ -14,6 +15,7 @@
         "laravel/scout": "^9.8",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.4",
         "mkocansey/bladewind": "^2.7"
     },
     "require-dev": {
