--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "mkocansey/bladewind": "^2.7"
+        "mkocansey/bladewind": "^2.7",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
