--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,9 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+            "php artisan storage:link"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
